# ds3_c_sdk

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile.am  README.md  buildrpm.sh  clean.sh  configure.ac  ds3.c  ds3.h  ds3_c_sdk.spec  ds3_c_sdk.spec.in  index.html  libds3.pc.in  main.c  main.cpp  net.c  net.h  r3x_migration_guide.md  util.h
3.0.0/: annotated.html  classes.html  dir_919ff6a1b72721a86b99a4b916e8b1a1.html  dir_fd679999342536e7357cd9e3d034de0f.html  doxygen.css  ds3_8c.html  ds3_8h.html  ds3_8h_source.html  ds3__net_8c.html  ds3__net_8c_source.html  ds3__net_8h.html  ds3__net_8h_source.html  ds3__request_8h.html  ds3__request_8h_source.html  ds3__string_8c.html  ds3__string_8c_source.html  ds3__string_8h.html  ds3__string_8h_source.html  ds3__string__multimap_8c.html  ds3__string__multimap_8c_source.html  ds3__string__multimap_8h.html  ds3__string__multimap_8h_source.html  ds3__string__multimap__impl_8c.html  ds3__string__multimap__impl_8c_source.html  ds3__string__multimap__impl_8h.html  ds3__string__multimap__impl_8h_source.html  ds3__utils_8c.html  ds3__utils_8c_source.html  ds3__utils_8h.html  ds3__utils_8h_source.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  (+224 more)
3.0.0/search/: all_0.js  all_1.js  all_10.js  (+51 more)
3.4.1/: annotated.html  classes.html  dir_919ff6a1b72721a86b99a4b916e8b1a1.html  dir_fd679999342536e7357cd9e3d034de0f.html  ds3_8c.html  ds3_8h.html  ds3_8h_source.html  ds3__connection_8c.html  ds3__connection_8c_source.html  ds3__connection_8h.html  ds3__connection_8h_source.html  ds3__net_8c.html  ds3__net_8c_source.html  ds3__net_8h.html  ds3__net_8h_source.html  ds3__request_8h.html  ds3__request_8h_source.html  ds3__string_8c.html  ds3__string_8c_source.html  ds3__string_8h.html  ds3__string_8h_source.html  ds3__string__multimap_8c.html  ds3__string__multimap_8c_source.html  ds3__string__multimap_8h.html  ds3__string__multimap_8h_source.html  ds3__string__multimap__impl_8c.html  ds3__string__multimap__impl_8c_source.html  ds3__string__multimap__impl_8h.html  ds3__string__multimap__impl_8h_source.html  ds3__utils_8c.html  ds3__utils_8c_source.html  ds3__utils_8h.html  ds3__utils_8h_source.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  (+285 more)
4.1.0/: annotated.html  classes.html  dir_919ff6a1b72721a86b99a4b916e8b1a1.html  dir_fd679999342536e7357cd9e3d034de0f.html  ds3_8c.html  ds3_8c_source.html  ds3_8h.html  ds3_8h_source.html  ds3__connection_8c.html  ds3__connection_8c_source.html  ds3__connection_8h.html  ds3__connection_8h_source.html  ds3__init__requests_8c.html  ds3__init__requests_8c_source.html  ds3__net_8c.html  ds3__net_8c_source.html  ds3__net_8h.html  ds3__net_8h_source.html  ds3__request_8h.html  ds3__request_8h_source.html  ds3__requests_8c.html  ds3__string_8c.html  ds3__string_8c_source.html  ds3__string_8h.html  ds3__string_8h_source.html  ds3__string__multimap_8c.html  ds3__string__multimap_8c_source.html  ds3__string__multimap_8h.html  ds3__string__multimap_8h_source.html  ds3__string__multimap__impl_8c.html  ds3__string__multimap__impl_8c_source.html  ds3__string__multimap__impl_8h.html  ds3__string__multimap__impl_8h_source.html  ds3__utils_8c.html  ds3__utils_8c_source.html  ds3__utils_8h.html  ds3__utils_8h_source.html  files.html  functions.html  functions_b.html  (+287 more)
5.0.0/: annotated.html  classes.html  dir_919ff6a1b72721a86b99a4b916e8b1a1.html  dir_fd679999342536e7357cd9e3d034de0f.html  doxygen.css  ds3_8c.html  ds3_8c_source.html  ds3_8h.html  ds3_8h_source.html  ds3__bool_8h.html  ds3__bool_8h_source.html  ds3__connection_8c.html  ds3__connection_8c_source.html  ds3__connection_8h.html  ds3__connection_8h_source.html  ds3__init__requests_8c.html  ds3__init__requests_8c_source.html  ds3__library__exports_8h.html  ds3__library__exports_8h_source.html  ds3__marshaling_8h.html  ds3__marshaling_8h_source.html  ds3__net_8c.html  ds3__net_8c_source.html  ds3__net_8h.html  ds3__net_8h_source.html  ds3__request_8h.html  ds3__request_8h_source.html  ds3__requests_8c.html  ds3__response__header__utils_8c.html  ds3__response__header__utils_8c_source.html  ds3__response__header__utils_8h.html  ds3__response__header__utils_8h_source.html  ds3__string_8c.html  ds3__string_8c_source.html  ds3__string_8h.html  ds3__string_8h_source.html  ds3__string__multimap_8c.html  ds3__string__multimap_8c_source.html  ds3__string__multimap_8h.html  ds3__string__multimap_8h_source.html  (+308 more)
cpp_sample/: Makefile  build_local.sh  main.cpp
docker/: Dockerfile  README.md  run_docker.rb  run_mem_tests.sh  run_tests.sh
modules/: FindGLIB2.cmake
sample/: .gitignore  Makefile  build_local.sh  get-bucket.c  get-bulk.c  get-object.c  get-service.c  main.c  main.cpp  put-bulk.c  samples.h
src/: .gitignore  CMakeLists.txt  Makefile.am  ds3.c  ds3.h  ds3.hpp  ds3_bool.h  ds3_connection.c  ds3_connection.h  ds3_init_requests.c  ds3_library_exports.h  ds3_marshaling.h  ds3_net.c  ds3_net.h  ds3_request.h  ds3_requests.c  ds3_response_header_utils.c  ds3_response_header_utils.h  ds3_string.c  ds3_string.h  ds3_string_multimap.c  ds3_string_multimap.h  ds3_string_multimap_impl.c  ds3_string_multimap_impl.h  ds3_test_exports.h  ds3_uint64_string_map.c  ds3_uint64_string_map.h  ds3_utils.c  ds3_utils.h
test/: .gitignore  CMakeLists.txt  Makefile  bucket_tests.c  bucket_tests.cpp  bucket_tests.h  build_local.sh  build_local_debug.sh  bulk_get.cpp  bulk_put.cpp  checksum.cpp  checksum.h  connection_tests.cpp  countdown_latch.c  countdown_latch.h  deletes_test.cpp  get_object.cpp  get_physical_placement.cpp  job_tests.cpp  metadata_tests.cpp  multimap_tests.cpp  negative_tests.cpp  put_directory.cpp  search_tests.cpp  service_tests.c  service_tests.cpp  service_tests.h  test.c  test.cpp  test.h  unit_tests.cpp  user_tests.cpp
win32/: Makefile.vc  README.md  ds3.def  package.bat  package_64.bat  run_package_dot_bat_instead.ps1  run_package_dot_bat_instead_64.ps1
(+147 files in other folders)
