AC_INIT([ds3], [1.0], [SDKDeveloper@spectralogic.com])
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CC

AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AM_PROG_AR
AM_PROG_CC_C_O

LT_INIT

GLIB2_CHECK="glib-2.0 >= 2.36"
LIBCURL_CHECK="libcurl >= 7.31"
LIBXML2_CHECK="libxml-2.0 >= 2.9"

PKG_CHECK_MODULES([GLIB2], $GLIB2_CHECK)
PKG_CHECK_MODULES([LIBCURL], $LIBCURL_CHECK)
PKG_CHECK_MODULES([LIBXML2], $LIBXML2_CHECK)

LIBDS3_DEPENDENCIES="$GLIB2_CHECK $LIBCURL_CHECK $LIBXML2_CHECK"
AC_SUBST([LIBDS3_DEPENDENCIES])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile libds3.pc])
AC_OUTPUT

